--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>Kanban board _11.6</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>JW Board</h1>
-    <div>
-
+    <nav class="navbar navbar-default navbar-fixed-top ">
+        <div class="container">              
+            <h1>Kanban Board</h1>               
+        </div>
+    </nav>
 	<div id="board" class="board">
-        <h1 class="head1">Kanban board</h1>
-        <button class="create-column">Add a column</button>
-        <div class="column-container">
-
+        <div class="container">
+            <button class="create-column btn btn-primary buttonFirst">Add a column</button>   
+        </div>
+        <div class="column-container container">   
         </div>
     </div>
 
